all buttons are disabled

--- a/client/src/StudentDashboard/modals/subcomponents/ButtonArray/styles.css
+++ b/client/src/StudentDashboard/modals/subcomponents/ButtonArray/styles.css
@@ -100,7 +100,27 @@
 }
 
 .obscure {
-	opacity: .75
+	opacity: .8;
+}
+
+.disabledButtonWrapper {
+
+	display: flex;
+	flex-flow: column;
+	/*background-color: yellow;*/
+	justify-content: center;
+	align-items: center;
+
+	opacity: 0.4;
+
+	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
+	-webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently */
+
 }
 
 
