--- a/client/src/StudentDashboard/modals/subcomponents/ButtonArray/styles.css
+++ b/client/src/StudentDashboard/modals/subcomponents/ButtonArray/styles.css
@@ -4,7 +4,7 @@
 	height: 100%;
 	display: flex;
 	flex-flow: row;
-	justify-content: space-around;
+	justify-content: space-evenly;
 	align-items: center;
 	padding-left: 30px;
 	padding-right: 30px;
@@ -36,8 +36,28 @@
 	transform: translateY(-3px);
     filter: brightness(120%);
     transition: all .3s;
+    opacity: 1;
 
 }
+
+.buttonWrapper:hover .obscure {
+	opacity: 1;
+	transition: all .3s;
+}
+
+.buttonWrapper:hover .smallIcon, buttonWrapper:hover .icon {
+	opacity: 1;
+	transition: all .3s;
+	color: rgb(36, 95, 146);
+}
+
+.buttonWrapper:hover .greenIcon {
+	opacity: 1;
+	transition: all .3s;
+	color: #50B250;
+}
+
+
 
 .buttonImage {
 	width: 60px;
@@ -89,6 +109,12 @@
 }
 
 
+
+.largeIcon {
+	color: rgb(36, 95, 146);
+    font-size: 5.4em;
+}
+
 .icon {
 	color: rgb(36, 95, 146);
     font-size: 3.8em;
@@ -101,7 +127,10 @@
 
 .obscure {
 	opacity: .8;
+	transition: all .3s;
+
 }
+
 
 .disabledButtonWrapper {
 
@@ -121,6 +150,15 @@
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently */
 
+}
+
+.greenIcon {
+	color: #50B250;
+}
+
+
+.lightgrayIcon {
+	color: #a2a2a2;
 }
 
 
