--- a/client/src/StudentDashboard/modals/subcomponents/ModalHeader/styles.css
+++ b/client/src/StudentDashboard/modals/subcomponents/ModalHeader/styles.css
@@ -15,6 +15,12 @@
     background-color: #DFF0D8;
 }
 
+.infoModalHeaderTitleWrapper{
+    border: 1px solid transparent;
+    background-color: #d9edf7;
+    border-color: #bce8f1;
+}
+
 
 .compModalHeaderTitleWrapper {
     color: #333;
@@ -33,4 +39,8 @@
 
 .successModalHeaderTitleText {
 	color: #6D8F6E;
+}
+
+.infoModalHeaderTitleText {
+	color: #31708f;
 }
