--- a/client/src/StudentDashboard/modals/subcomponents/ButtonArray/styles.css
+++ b/client/src/StudentDashboard/modals/subcomponents/ButtonArray/styles.css
@@ -45,7 +45,7 @@
 	transition: all .3s;
 }
 
-.buttonWrapper:hover .smallIcon, buttonWrapper:hover .icon {
+.buttonWrapper:hover .smallIcon, .buttonWrapper:hover .icon, .buttonWrapper:hover .blueIcon {
 	opacity: 1;
 	transition: all .3s;
 	color: rgb(36, 95, 146);
