--- a/client/src/StudentDashboard/modals/subcomponents/ModalHeader/styles.css
+++ b/client/src/StudentDashboard/modals/subcomponents/ModalHeader/styles.css
@@ -22,6 +22,13 @@
 }
 
 
+.dangerModalHeaderTitleWrapper{
+    border: 1px solid transparent;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+}
+
+
 .compModalHeaderTitleWrapper {
     color: #333;
     background-color: #f5f5f5;
@@ -43,4 +50,8 @@
 
 .infoModalHeaderTitleText {
 	color: #31708f;
+}
+
+.dangerModalHeaderTitleText {
+    color: #a94442;
 }
