two exit paths; problem with exiting

--- a/client/src/StudentDashboard/components/NavigationBar/styles.css
+++ b/client/src/StudentDashboard/components/NavigationBar/styles.css
@@ -23,7 +23,8 @@
 	margin-left: 60px;
 	/*background-color: red;*/
 	margin-right: auto;
-	font-family: 'Proximanova Semibold'
+	font-family: 'Proximanova Semibold';
+	cursor: pointer;
 }
 
 .centerDisplayContainer {
