--- a/client/src/StudentDashboard/modals/PlaybackModal/styles.css
+++ b/client/src/StudentDashboard/modals/PlaybackModal/styles.css
@@ -1,9 +1,10 @@
 .playbackContainer {
 	width: 100%;
-	height: 130px;
+    height: 190px;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
 	border-bottom: 0.1px solid lightgray;
 	flex-flow: column;
+	color: #4a4a4a;
 }
