tutorial with partial disabling is working

--- a/client/src/StudentDashboard/components/BackArrowButton/styles.css
+++ b/client/src/StudentDashboard/components/BackArrowButton/styles.css
@@ -65,6 +65,37 @@
                                   supported by Chrome and Opera */
 }
 
+
+
+.partiallyDisabledButtonContainer {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-flow: row;
+	justify-content: flex-end;
+	align-items: center;
+	z-index: 100;
+	color: white;
+	border-radius: 5px;
+	background-image: url(/images/dashboard/blue-arrow.svg);
+	background-size: 100% 100%;
+
+	opacity: 0.8;
+
+	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
+	-webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+
+
+
+
+
 .arrowButtonTextContainer {
 	float: left;
 	margin-right: 5px;
