--- a/client/src/StudentDashboard/modals/subcomponents/ButtonArray/styles.css
+++ b/client/src/StudentDashboard/modals/subcomponents/ButtonArray/styles.css
@@ -18,7 +18,6 @@
 	align-items: center;
     padding-left: 70px;
     padding-right: 45px;
-
 }
 
 .buttonWrapper {
@@ -29,7 +28,9 @@
 	align-items: center;
 	cursor: pointer;
     transition: all .3s;
-	
+	max-width: 160px;
+	text-align: center;
+
 }
 
 .buttonWrapper:hover {
@@ -169,6 +170,10 @@
 
 .lightgrayIcon {
 	color: #a2a2a2;
+}
+
+.noTransform {
+	transform: none;
 }
 
 
