eliminate vendor-bundle of CSS and eliminate FA-animatinos from homepage

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
 <!--<![endif]-->
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.min.css">
 
 
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
@@ -940,7 +939,7 @@ a.demo-button button#new-hero-button {
     btn.className += " disabled";
 
     var icon = document.getElementById("btn-icon");
-    icon.className += " fa-spinner faa-spin";
+    icon.className += " fa-spinner fa-pulse";
     icon.classList.remove("faa-pulse");
  
   }
