Fix to transcriber interface so that submission also saves. Fix on rendering 0-valued comp scores. Styling.

--- a/client/src/ReportsInterface/styles.css
+++ b/client/src/ReportsInterface/styles.css
@@ -393,6 +393,10 @@
 	/*Less contrast with white background than #249C44*/
 }
 
+.compFair {
+	color: #af6304;
+}
+
 .compCorrect, .compMissed {
 	margin-left: 20px;
 }
