--- a/client/src/StudentDashboard/components/NavigationBar/styles.css
+++ b/client/src/StudentDashboard/components/NavigationBar/styles.css
@@ -122,4 +122,12 @@
 }
 
 
+.reportNav {
+	    -webkit-box-shadow: 1px 10px 19px -8px rgba(84,84,84,.5);
+    -moz-box-shadow: 1px 10px 19px -8px rgba(84,84,84,.5);
+    box-shadow: 1px 10px 19px -8px rgba(84,84,84,.5);
+    position: fixed;
+    width: 100%;
+}
+
 
