--- a/client/src/ReportsInterface/styles.css
+++ b/client/src/ReportsInterface/styles.css
@@ -368,6 +368,7 @@
 	font-family: 'ProximaNova Semibold';
     line-height: 1.6;
     font-size: 16px;
+    width: 600px;
 
 }
 
@@ -382,6 +383,8 @@
     font-size: 1.075em;
     line-height: 1.6;
     margin-left: 20px;
+    width: 580px;
+    display: inline-block;
  }
 
 .compMissed {
@@ -399,6 +402,7 @@
 
 .compCorrect, .compMissed, .compFair {
 	margin-left: 20px;
+	width: 580px;
 }
 
 span.missed, span.correct {
@@ -554,5 +558,16 @@ a:hover {
 	margin: 0 auto;
 	display: block;
 
+}
+
+.miniPlayButton {
+	line-height: .9;
+    position: relative;
+    top: -10px;
+    font-family: 'ProximaNova semibold';
+}
+
+.miniPlayIcon {
+	margin-left: 3px;
 }
 
