--- a/app/views/layouts/reports.erb
+++ b/app/views/layouts/reports.erb
@@ -11,6 +11,9 @@
 
     <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css" %>
 
+    <%= stylesheet_link_tag    'https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.min.css', media: 'all', 'data-turbolinks-track': 'reload' %>
+
+
     <% if ENV["HMR"] == "1" %>
       <%= javascript_include_tag "http://localhost:8080/hmr-bundle.js" %>
     <% else %>
