--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -134,15 +134,15 @@
     border-color: rgba(0,0,0,0.2) rgba(0,0,0,0.35) rgba(0,0,0,0.55);
     border-bottom-width: 2px;
     font-size: inherit;
-    padding: .8em 1.4em;
+    padding: .6em 1em;
     border-radius: 5px;
     font-weight: 600;
     /* color: #5876EF; */
-    background-color: #FF4242;
+    background-color: #f64751;
     /* background-color: #f5f5f5; */
     text-decoration: none;
     display: inline-block;
-    font-family: 'ProximaNova'
+    font-family: 'ProximaNova Semibold'
 }
 
 
