--- a/client/src/TranscriberInterface/styles.css
+++ b/client/src/TranscriberInterface/styles.css
@@ -35,8 +35,10 @@ body {
 }
 
 .audioElement {
-	width: 500px;
+	width: 325px;
 	margin-top: 20px;
+	margin-right: 4px;
+	display: block
 }
 
 .markupContainer {
@@ -82,7 +84,7 @@ body {
 }
 
 .questionIcon {
-	margin-left: 500px;
+	margin-left: 7px;
 }
 
 .myTextArea {
