Transcribe --> Grade, global name change

--- a/app/views/homepage/instructions.erb
+++ b/app/views/homepage/instructions.erb
@@ -39,8 +39,8 @@
 			<ol>
 			<li>Review a sample&nbsp;<a href="/reports/direct-sample" target="_blank">here</a></li>
 			<li>Read this document</li>
-			<li>Do a practice&nbsp;<a href="/transcribe/78" target="_blank">here</a></li>
-			<li>Be ready to do an actual one when needed at <a href="https://www.readupnow.com/transcribe/latest">www.readupnow.com/transcribe/latest<br /><br /></a></li>
+			<li>Do a practice&nbsp;<a href="/grade/78" target="_blank">here</a></li>
+			<li>Be ready to do an actual one when needed at <a href="https://www.readupnow.com/grade/latest">www.readupnow.com/grade/latest<br /><br /></a></li>
 			</ol>
 			<p><strong>Optional</strong></p>
 			<ol>
@@ -74,18 +74,18 @@
           <div><strong>E</strong>: end the grading where the student stopped reading.&nbsp;</div>
           <div>&nbsp;</div> 
           <div>&nbsp;</div> 
-          <h3><span styles="font-size: 18px;"><strong>How to transcribe non-words</strong></span></h3>
+          <h3><span styles="font-size: 18px;"><strong>How to grade non-words</strong></span></h3>
           <div>&nbsp;</div>
           <div>
-          <div>When the reader says a non-word, you should transcribe the sounds phonetically. You may be unfamiliar with phonemes and phonetic transcription. A "phoneme" is the smallest unit of human speech - like "ch" or "b." All words are made up of phonemes. For example, the word "shin" has three phonemes: "sh" "i" and "n."</div>
+          <div>When the reader says a non-word, you should grade the sounds phonetically. You may be unfamiliar with phonemes and phonetic transcription. A "phoneme" is the smallest unit of human speech - like "ch" or "b." All words are made up of phonemes. For example, the word "shin" has three phonemes: "sh" "i" and "n."</div>
           <div>&nbsp;</div>
-          <div>We've adopted&nbsp;the phoneme chart below. You should study the phonemes and their spellings carefully. You may want to print the phoneme chart for reference. We've also prepared a&nbsp;video below&nbsp;to teach you the phoneme sounds and spellings.&nbsp;You must use these phonemes to transcribe non-words uttered; <strong>transcribing what you hear in a way that "looks right," but does not match the phonemes in the chart, is not acceptable.</strong></div>
+          <div>We've adopted&nbsp;the phoneme chart below. You should study the phonemes and their spellings carefully. You may want to print the phoneme chart for reference. We've also prepared a&nbsp;video below&nbsp;to teach you the phoneme sounds and spellings.&nbsp;You must use these phonemes to grade non-words uttered; <strong>transcribing what you hear in a way that "looks right," but does not match the phonemes in the chart, is not acceptable.</strong></div>
           <div>&nbsp;</div>
           <div>When transcribing a non-word, you will simply string together the appropriate phoneme spellings. For example, if a child says "b" "l" "i-" "k," you should write "blik."</div>
           <div>&nbsp;</div>
           <div>Two clarifications:</div>
           <div>&nbsp;</div>
-          <div>1. Sometimes, your phonetically transcribed non-word will coincidentally have the same spelling as a real word with a different pronunciation. In these case, just add a hyphen "-" to indicate that the spelling should be interpreted phonetically. For example, if you hear "i-" followed by "s," you should write "is-", "-is" or "i-s," because "is" will be interpreted as the word "is," which is pronounced "iz". Similarly, if you hear an "i-" phoneme all by itself, you should write "i-" not "i," because "i" will be interpreted as the word "I," which is pronounced "ie".</div>
+          <div>1. Sometimes, your phonetically graded non-word will coincidentally have the same spelling as a real word with a different pronunciation. In these case, just add a hyphen "-" to indicate that the spelling should be interpreted phonetically. For example, if you hear "i-" followed by "s," you should write "is-", "-is" or "i-s," because "is" will be interpreted as the word "is," which is pronounced "iz". Similarly, if you hear an "i-" phoneme all by itself, you should write "i-" not "i," because "i" will be interpreted as the word "I," which is pronounced "ie".</div>
           <div>&nbsp;</div>
           <div>2. Because there is some overlap between phonetic spellings (e.g. "e" and "ee"), there will be times when the same phonetic transcription could be interpreted in multiple ways. For example, the non-word "keer" could be interpreted as "k" "ee" "r" or as "k" "e" "e" "r." Our parser starts at the left and prioritizes two-letter phonemes ("ee") over one-letter phonemes ("e"), so "keer" will be interpreted as "k" "ee" "r." As a result, if you hear "k" "e" "e" "r," you should be sure to separate the&nbsp;e's&nbsp;using hyphens. You could write "k-e-e-r" "ke-er" "k-e-er" or "k-e-er." All that matters here is that the&nbsp;e's&nbsp;are separated.&nbsp;</div>
           </div>
