--- a/client/src/GraderInterface/styles.css
+++ b/client/src/GraderInterface/styles.css
@@ -9,7 +9,19 @@ body {
 	padding-bottom: 50px;*/
 	padding: 50px;
 	padding-top: 130px;
-	padding-left: 90px
+	padding-left: 90px;
+}
+
+.headingContainer {
+	width: 550px;
+	display: inline-block;
+}
+
+.compPromptContainer {
+	margin-top: 20px;
+	display: inline-block;
+	margin-bottom: 35px;
+
 }
 
 .gradingViewLabel {
@@ -66,6 +78,12 @@ body {
 	margin-top: 30px;
 	width: 100%;
 	margin-bottom: 100px;
+}
+
+.promptButtonGroup {
+	margin-top: 5px;
+	margin-bottom: 0px;
+
 }
 
 
