--- a/client/src/StudentDashboard/components/NavigationBar/styles.css
+++ b/client/src/StudentDashboard/components/NavigationBar/styles.css
@@ -15,6 +15,12 @@
 .subContainer {
 	flex: 1;
 	align-items: center;
+	text-align: center;
+}
+
+.notRecording {
+	color: white;
+	opacity: .6;
 }
 
 .brandText {
