remove preview comp button"

--- a/client/src/StudentDashboard/components/NavigationBar/styles.css
+++ b/client/src/StudentDashboard/components/NavigationBar/styles.css
@@ -15,6 +15,11 @@
 .subContainer {
 	flex: 1;
 	align-items: center;
+}
+
+.notRecordingSubContainer {
+	flex: 1;
+	align-items: center;
 	text-align: center;
 }
 
