--- a/client/src/GraderInterface/styles.css
+++ b/client/src/GraderInterface/styles.css
@@ -21,7 +21,12 @@ body {
 	margin-top: 20px;
 	display: inline-block;
 	margin-bottom: 35px;
+	margin-right: 30px;
 
+}
+
+.block {
+	display: block;
 }
 
 .gradingViewLabel {
