--- a/client/src/StudentDashboard/components/BookPage/styles.css
+++ b/client/src/StudentDashboard/components/BookPage/styles.css
@@ -30,11 +30,24 @@
 	/*min-height: 200px;*/
 }
 
+.wideReaderImage {
+	width: 100%;
+	height: 75%;
+}
+
 .paperTearImage {
 	width: 100%;
 	height: 10px;
 	position: relative;
 	top: -10px;
+}
+
+
+.widePaperTearImage {
+	width: 100%;
+	height: 40px;
+	position: relative;
+	top: -40px;
 }
 
 .readerTextContainer {
@@ -43,6 +56,16 @@
     display: flex;
 	flex-flow: column;
 	justify-content: space-around;
+}
+
+.wideReaderTextContainer { 
+	flex: .875;
+    line-height: 1.6;
+    display: flex;
+	flex-flow: column;
+	justify-content: space-around;
+	margin-top: -50px;
+
 }
 
 .textParagraph {
