--- a/client/src/StudentDashboard/components/BookPage/styles.css
+++ b/client/src/StudentDashboard/components/BookPage/styles.css
@@ -22,6 +22,7 @@
 	/*padding: 5px;*/
 	display: flex;
 	flex-flow: column;
+	overflow-y: hidden; /*for wide books*/
 }
 
 .readerImage {
@@ -33,6 +34,7 @@
 .wideReaderImage {
 	width: 100%;
 	height: 75%;
+	margin-top: -30px
 }
 
 .paperTearImage {
