--- a/client/src/StudentDashboard/components/BookPage/styles.css
+++ b/client/src/StudentDashboard/components/BookPage/styles.css
@@ -5,6 +5,7 @@
 	display: flex;
 	flex-flow: row;
 	border: 3px solid #937050;
+	border-radius: 5px;
 	box-shadow: -5px 2px 73px 2px rgba(0,0,0,0.65);
 
 }
@@ -58,6 +59,7 @@
     display: flex;
 	flex-flow: column;
 	justify-content: space-around;
+	border-radius: 5px;
 }
 
 .wideReaderTextContainer { 
@@ -67,6 +69,7 @@
 	flex-flow: column;
 	justify-content: space-around;
 	margin-top: -50px;
+	border-radius: 5px;
 
 }
 
