mobile halting on the demo

--- a/app/views/homepage/mobile_halt.erb
+++ b/app/views/homepage/mobile_halt.erb
@@ -25,17 +25,20 @@
   	font-family: 'Proximanova';
   	font-size: 21px;
   	line-height: 1.4;
+    font-weight: 100;
+
   }
 
   span.explanatory-text {
   	font-family: 'Proximanova';
-    font-weight: bold;
+    font-weight: 100;
   }
+
 </style>
 
 <%= render 'homepage/partials/navbar' %>
 
 <div class="cta">
-	<h1 class="celebration">Great! 🙌🏽</h1>
-	<h2 class="mobile-cta">Now just get on a <span class="explanatory-text">desktop computer</span> to see ReadUp live</h2>
+	<h1 class="celebration">Hold on!</h1>
+	<h2 class="mobile-cta">Just get on a <span class="explanatory-text">desktop computer</span> to see ReadUp live</h2>
 </div>
