--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -826,11 +826,13 @@ a.demo-button button#new-hero-button {
     <div class="title">
       <div id="myTitleText" class="pure-u-1 pure-u-md-3-5">
         <h1>
-          The easiest way to assess fluency and comprehension
+          F&ampP assessments, without losing instructional time
         </h1>
 
           <h4 id="sub-pitch">
-            ReadUp's reading specialists listen to students read and score a full running record for you with fluency, accuracy, comprehension, miscue analysis, and a recording 
+            ReadUp's reading specialists listen to students read F&ampP texts and score a full assessment for you with miscues, a comprehension conversation, fluency, accuracy, and a recording
+
+ 
            </h4>
       <a class="demo-button" href="/student_dashboard/#/story/demo">
         <button class="primary-btn" id="new-hero-button" onclick="demoClicked()"> 
