--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -826,11 +826,11 @@ a.demo-button button#new-hero-button {
     <div class="title">
       <div id="myTitleText" class="pure-u-1 pure-u-md-3-5">
         <h1>
-          F&ampP assessments, without losing instructional time
+          F&ampP assessments, without lost instructional time
         </h1>
 
           <h4 id="sub-pitch">
-            ReadUp's reading specialists listen to students read F&ampP texts and score a full assessment for you with miscues, a comprehension conversation, fluency, accuracy, and a recording
+            ReadUp's reading specialists listen to students read F&ampP texts and score a full assessment for you with a running record, a comprehension conversation, fluency, accuracy, and a recording
 
  
            </h4>
