--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -834,7 +834,7 @@ a.demo-button button#new-hero-button {
 
  
            </h4>
-      <a class="demo-button" href="/student_dashboard/#/story/demo">
+      <a class="demo-button" href="/demo">
         <button class="primary-btn" id="new-hero-button" onclick="demoClicked()"> 
         Try a Demo
         <i class="fa fa-angle-right faa-pulse animated fa-lg" id="btn-icon"></i>
