--- a/client/src/StudentDashboard/styles.css
+++ b/client/src/StudentDashboard/styles.css
@@ -123,10 +123,10 @@
 
 .myQuestionMarkIcon {
 	position: relative;
-    top: -46px;
+    top: -56px;
     left: 30px;
-    font-size: 1.5em;
-    color: white;
+    font-size: 2.8em;
+	color: #4a4a4a;    
 }
 
 
