MSV mock appearing on sample, crappy code and hacky implementation

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -61,6 +61,13 @@ label.error {
 	}
 }
 
+@media (max-width: 1000px) {
+	.rightSide {
+		display: none;
+	}
+
+}
+
 
 /*@media (min-width: 1200px) {
 	.container {
