--- a/client/src/ReportsInterface/styles.css
+++ b/client/src/ReportsInterface/styles.css
@@ -15,9 +15,25 @@
 		transform: scale(1.0)
 	}	
 }
+/**/
 
+@keyframes wiggle{
+	42%{transform:rotate(0deg)}
+	46%{transform:rotate(5deg)}
+	50%{transform:rotate(-5deg)}
+	54%{transform:rotate(5deg)}
+	58%{transform:rotate(-5deg)}
+	62%{transform:rotate(5deg)}
+	66%{transform:rotate(-5deg)}
+	70%{transform:rotate(0deg)}
+}
 
+.wiggler {
 
+/*    -webkit-animation: wiggle 5s infinite;*/
+    animation: wiggle 5s infinite;
+
+}
 
 .pulse {
 	animation: pulseOut 2s infinite;
