--- a/client/src/ReportWithScorer/styles.css
+++ b/client/src/ReportWithScorer/styles.css
@@ -9,9 +9,9 @@ body {
     height: 100vh;
     min-height: 680px;
     text-align: center;
-    -webkit-box-shadow: 0px 0px 16px 2px rgba(0,0,0,0.21);
-    box-shadow: 0px 0px 16px 2px rgba(0,0,0,0.21);
-    background-color: #FCFAFA;
+/*    -webkit-box-shadow: 0px 0px 16px 2px rgba(0,0,0,0.06);
+    box-shadow: 0px 0px 16px 2px rgba(0,0,0,0.06);
+*/    background-color: #f9f9f9;
 }
 
 .profileContainer h3 {
