--- a/app/views/homepage/partials/_navbar.html.erb
+++ b/app/views/homepage/partials/_navbar.html.erb
@@ -75,7 +75,7 @@
     <div class="nav-buttons">
 
 
-      <a class="demo-button" id="demo-nav-button" href="/reports/direct-sample"">
+      <a class="demo-button" id="demo-nav-button" href="/reports/direct-sample?brand=STEP">
         <button
           id="top-button"
           class="pure-button-primary pure-button signup-button"
