--- a/app/assets/stylesheets/homepage/_navbar.scss
+++ b/app/assets/stylesheets/homepage/_navbar.scss
@@ -19,12 +19,12 @@
    z-index: 300;
    width: 100%;
    height: 4em;
-   background-color: transparent;
-   color: white;
+   background-color: white;
+   color: #2C6D9C;
    font-family: 'Proximanova Semibold', sans-serif;
 
    a {
-    color: white;
+    color: #2C6D9C;
    }
 
 
@@ -53,8 +53,9 @@
      }
 
      button#top-button {
-      background-color: #FF4242;
+      background-color: #6ab258;
       color: white;
+      font-family: 'Proximanova Semibold';
      }
    }
 }
@@ -63,9 +64,10 @@
 
 
 button#top-button {
-  background-color: white;
+  background-color: #6ab258;
+  color: white;
+  font-family: 'Proximanova Semibold';
 
-  color: #2C6D9C;
 }
 
 button.signup-button {
