--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -138,7 +138,7 @@
     border-radius: 5px;
     font-weight: 600;
     /* color: #5876EF; */
-    background-color: #f64751;
+    background-color: #6ab258;
     /* background-color: #f5f5f5; */
     text-decoration: none;
     display: inline-block;
@@ -149,7 +149,7 @@
 
   button i {
     margin-left: .2em;
-    color: #690000;
+    color: #2d6900;
     font-size: 1.85em !important;
   }
 
