--- a/client/src/ReportsInterface/styles.css
+++ b/client/src/ReportsInterface/styles.css
@@ -106,6 +106,19 @@
 }
 
 
+.icon {
+	display: inline-block;
+    height: 20px;
+    margin-left: 10px;
+    max-width: none !important
+}
+
+.playbookTrigger {
+	font-family: 'ProximaNova Semibold';
+	color: #2e6da4;
+	cursor: pointer;
+}
+
 .metricsHeadingContainer {
 	flex: 1;
 	display: flex;
