--- a/client/src/GraderInterface/styles.css
+++ b/client/src/GraderInterface/styles.css
@@ -2,6 +2,12 @@ body {
 	font-family: 'ProximaNova';
 }
 
+.waitingInfoHeader {
+	color: #4a4a4a;
+	text-align: center;
+	position: relative;
+	top: 30vh;
+}
 
 .graderContainer {
 	/*padding-left: 50px;
