put FP and STEP both on homepage

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -826,7 +826,7 @@ a.demo-button button#new-hero-button {
     <div class="title">
       <div id="myTitleText" class="pure-u-1 pure-u-md-3-5">
 
-        <% @brand = {name: 'STEP', code: 'STEP'}; @brand2 = {name: 'F&P', code: 'FP'} 
+        <% @brand = {name: 'F&P and STEP'}; @brand3 = {name: 'STEP', code: 'STEP'}; @brand2 = {name: 'F&P', code: 'FP'} 
 
         %>
 
@@ -835,7 +835,7 @@ a.demo-button button#new-hero-button {
         </h1>
 
           <h4 id="sub-pitch">
-            ReadUp's reading specialists listen to students read <%= @brand[:name] %> texts and score a full assessment for you with a running record, a comprehension conversation, fluency, accuracy, and a recording
+            ReadUp's reading specialists listen to students read and score a full assessment for you with a running record, a comprehension conversation, fluency, miscue analysis, and a recording
 
  
            </h4>
