fix homepage link bug

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -826,7 +826,7 @@ a.demo-button button#new-hero-button {
     <div class="title">
       <div id="myTitleText" class="pure-u-1 pure-u-md-3-5">
 
-        <% @brand = {name: 'F&P and STEP'}; @brand3 = {name: 'STEP', code: 'STEP'}; @brand2 = {name: 'F&P', code: 'FP'} 
+        <% @brand = {name: 'F&P and STEP', code: 'STEP'}; @brand3 = {name: 'STEP', code: 'STEP'}; @brand2 = {name: 'F&P', code: 'FP'} 
 
         %>
 
