some edits to make magic work on safari

--- a/client/src/ReportsInterface/styles.css
+++ b/client/src/ReportsInterface/styles.css
@@ -143,9 +143,8 @@ button:hover, .btn-primary:hover {
 	transition: all .3s;
 }
 
-.audioWrapper button:hover {
+.audioWrapper button:hover, button.miniPlayButton:hover {
 	transform: translateY(0px);
-
 }
 
 
