--- a/client/src/GraderInterface/styles.css
+++ b/client/src/GraderInterface/styles.css
@@ -9,6 +9,14 @@ body {
 	top: 30vh;
 }
 
+.waitingInfoSubHeader {
+    color: #4a4a4a;
+    text-align: center;
+    position: relative;
+    top: 32vh;
+    font-weight: 100;
+}
+
 .graderContainer {
 	/*padding-left: 50px;
 	padding-top: 50px;
