--- a/app/views/layouts/grader_interface.erb
+++ b/app/views/layouts/grader_interface.erb
@@ -2,6 +2,10 @@
 <html style="height: 100%;">
   <head>
     <title>Readup</title>
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
