--- a/client/src/ReportsInterface/styles.css
+++ b/client/src/ReportsInterface/styles.css
@@ -109,7 +109,7 @@
 .icon {
 	display: inline-block;
     height: 20px;
-    margin-left: 10px;
+    margin-left: 7px;
     max-width: none !important
 }
 
@@ -118,6 +118,7 @@
 	color: #2e6da4;
 	cursor: pointer;
 	width: 9.5em;
+	display: inline-block;
 }
 
 .playbookTrigger:hover  {
