--- a/client/src/ReportsInterface/styles.css
+++ b/client/src/ReportsInterface/styles.css
@@ -128,6 +128,23 @@
 
 }
 
+.alertSuccess {
+	position: fixed;
+    top: 59px;
+    right: 0px;
+    width: 77%;
+    text-align: center;
+    z-index: 99999;
+}
+
+.miniAlert {
+	width: 440px;
+	position: relative;
+	top: 20px;
+	left: -12px;
+}
+
+
 button:hover, .btn-primary:hover {
 	transform: translateY(-3px);
     box-shadow: 0 7px 14px rgba(50,50,93,.1), 0 3px 6px rgba(0,0,0,.08);
