--- a/app/assets/stylesheets/homepage/_product-sections.scss
+++ b/app/assets/stylesheets/homepage/_product-sections.scss
@@ -231,7 +231,7 @@
 
   // have a different resized background on mobile
   div.splash-container {
-  background: url('/images/newbkg-mobile.jpg')
+  background: url('https://d39onmifexd5hc.cloudfront.net/website/homepage/hero/student-hero-blue-mobile.jpg')
           center
           top/cover
           no-repeat
