--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -291,7 +291,7 @@
     }
 
     .splash-new .splash-container {
-      background: url('/images/newbkg.jpg')
+      background: url('https://d39onmifexd5hc.cloudfront.net/website/homepage/hero/student-hero-blue-desktop.jpg')
           center
           top/cover
           no-repeat
@@ -436,7 +436,7 @@
     }
 
     div.splash-container {
-        background: url('/images/newbkg-tablet.jpg')
+        background: url('https://d39onmifexd5hc.cloudfront.net/website/homepage/hero/student-hero-blue-tablet.jpg')
           center
           top/cover
           no-repeat
@@ -817,7 +817,7 @@ a.demo-button button#new-hero-button {
 <div class="splash-new">
   <div
     class="splash-container pure-g"
-    style="background: url('/images/newbkg.jpg')
+    style="background: url('https://d39onmifexd5hc.cloudfront.net/website/homepage/hero/student-hero-blue-desktop.jpg')
           center
           top/cover
           no-repeat
