killer mockup on homepage

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -717,7 +717,7 @@ a.demo-button button#new-hero-button {
 @media (min-width: 35.5em)
 {
   .device-image {
-    width: 300px;
+    width: 700px;
     z-index: 1;
 
   }
@@ -728,7 +728,7 @@ a.demo-button button#new-hero-button {
 
   .device-image {
     left: 50%;
-    margin-left: -135px;
+    margin-left: -335px;
     position: absolute;
   }
 
@@ -749,8 +749,8 @@ a.demo-button button#new-hero-button {
 {
 
   .device-image {
-    margin-left: -65px;
-  }
+/*    margin-left: -65px;
+*/  }
 
   .animation-video {
     margin-left: -51px;
@@ -854,12 +854,12 @@ a.demo-button button#new-hero-button {
 <div class="animation-container pure-u-1 pure-u-md-1-3"> 
   <div class="perspective-container"> 
 
-    <img class="device-image rotate" src="https://d39onmifexd5hc.cloudfront.net/website/homepage/ipad-bkg-and-placeholder.png">
+    <img class="device-image" src="/images/desktop-mockup.png">
 
-    <video class="animation-video rotate" loop muted autoplay preload="1">
+<!--     <video class="animation-video rotate" loop muted autoplay preload="1">
               <source src="https://d39onmifexd5hc.cloudfront.net/website/homepage/v1.mp4" type="video/mp4">
     </video>
-
+ -->
 
 
 
@@ -869,7 +869,7 @@ a.demo-button button#new-hero-button {
 
 
       <div id="ipadImgContainer">
-        <img id="ipadImg" src="https://d39onmifexd5hc.cloudfront.net/website/homepage/ipad-compressed-min.png" alt="">
+        <img id="ipadImg" src="/images/desktop-mockup.png" alt="">
       </div>
     </div>
 
