--- a/app/assets/stylesheets/homepage/_navbar.scss
+++ b/app/assets/stylesheets/homepage/_navbar.scss
@@ -19,12 +19,11 @@
    z-index: 300;
    width: 100%;
    height: 4em;
-   background-color: white;
-   color: #2C6D9C;
+   color: white;
    font-family: 'Proximanova Semibold', sans-serif;
 
    a {
-    color: #2C6D9C;
+    color: white;
    }
 
 
