--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -831,7 +831,7 @@ a.demo-button button#new-hero-button {
         %>
 
         <h1>
-          <%= @brand[:name] %> assessments, without lost instructional time
+          <%= @brand[:name] %> assessments— without lost instructional time
         </h1>
 
           <h4 id="sub-pitch">
