span reading specialists

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -835,7 +835,7 @@ a.demo-button button#new-hero-button {
         </h1>
 
           <h4 id="sub-pitch">
-            ReadUp's reading specialists listen to students read and score a full assessment for you with a running record, a comprehension conversation, fluency, miscue analysis, and a recording
+            ReadUp's <span>reading specialists</span> listen to students read and score a full assessment for you with a running record, a comprehension conversation, fluency, miscue analysis, and a recording
 
  
            </h4>
